--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "ember-ajax": "0.7.1",
     "ember-bootstrap": "0.8.0",
     "ember-cli": "2.5.0",
+    "ember-cli-active-link-wrapper": "0.2.0",
     "ember-cli-app-version": "^1.0.0",
     "ember-cli-babel": "^5.1.6",
     "ember-cli-dependency-checker": "^1.2.0",
