--- a/bower.json
+++ b/bower.json
@@ -6,6 +6,7 @@
     "ember-cli-test-loader": "0.2.2",
     "ember-qunit-notifications": "0.1.0",
     "bootstrap": "~3.3.5",
-    "file-saver": "filesaverjs#^1.3.2"
+    "file-saver": "filesaverjs#^1.3.2",
+    "js-xlsx": "^0.8.0"
   }
 }
